welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: not found: value True
      return True
             ^