welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean=
{
  if (estFaceMur())
  {
    return false
  }
  else
  {
    avance()
    if (getCouleurSol()==Color.green)
    {
      recule()
      return True
    }
    else
    {
      recule()
      return false
    }
  }
}